vlib/v/checker/tests/var_duplicate_const.vv
const size = 22

fn main() {
    size := 11
    println(main.size)
}
